# PARNESS

./: .env.example  .gitignore  .gitmodules  README.md  pyproject.toml
config/: kg_config.yaml  opencode_config.yaml  resource_config.yaml
config/pipelines/: auto_idea_to_paper.yaml  auto_paper_e2e_opencode.yaml  bfs_vs_dfs.yaml  conditional_merge_decision.yaml  db_persist_layer.test.yaml  db_persist_layer.yaml  domain_scan.yaml  experiment_only.yaml  experiment_opencode.yaml  iclr_idea_pipeline.yaml  idea_driven_crawl.yaml  idea_generation_loop.yaml  idea_mining.yaml  iterative_research_pipeline.yaml  kg_abstract_enrichment.yaml  kg_ingest.yaml  kg_maintenance.yaml  kg_query.yaml  merge_vs_quick_sort.yaml  paper_intra_index.yaml  paper_intra_index_incremental.yaml  paper_search_intents.smoke.yaml  paper_search_intents.yaml  paper_search_multi_intent.smoke.yaml  paper_search_multi_intent.yaml  paper_search_multi_source.yaml  paper_write.yaml  parallel_experiment.yaml  pdf_parse_persist_layer.prod100.yaml  pdf_parse_persist_layer.test.yaml  pdf_parse_persist_layer.yaml  pdf_parse_refs.yaml  pdf_parsed_persist_pipeline.yaml  pdf_reparse_daemon_pipeline.yaml  simple_idea_test.yaml  title_persist_layer.test.yaml  title_persist_layer.yaml  two_sum_comparison.yaml
scripts/: backfill_paper_provenance.py  backup_kg.py  design_adapter.py  discover_cross_paper.py  fix_db_titles_via_s2.py  gen_paper_search_yaml.py  index_all_papers.py  kg_summary.py  migrate_knowledge_store.py  run_auto_idea_to_paper.py  run_pek_env.sh  run_pipeline.py  validate_pipeline.py
src/db/: __init__.py  (+3 more)
(+536 files in other folders)
