[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "parness"
version = "0.1.0"
description = "Automated research paper generation pipeline with DAG-based orchestration"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.8",
    "tiktoken>=0.7",
]

[project.scripts]
paper-cli = "src.paper_cli.run:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]
pdf = [
    "torch",
    "transformers",
    "accelerate",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
